# backend/app/api/static/docs/swagger.yaml
@@ -168,6 +168,9 @@ definitions:
       summary:
         description: Summary holds the value of the "summary" field.
         type: string
+      tag_id:
+        description: TagID holds the value of the "tag_id" field.
+        type: string
       updated_at:
         description: UpdatedAt holds the value of the "updated_at" field.
         type: string
@@ -178,6 +181,46 @@ definitions:
         allOf:
         - $ref: '#/definitions/ent.Entity'
         description: Entity holds the value of the entity edge.
+      tag:
+        allOf:
+        - $ref: '#/definitions/ent.ChangelogTag'
+        description: Tag holds the value of the tag edge.
+    type: object
+  ent.ChangelogTag:
+    properties:
+      color:
+        description: Color holds the value of the "color" field.
+        type: string
+      created_at:
+        description: CreatedAt holds the value of the "created_at" field.
+        type: string
+      edges:
+        allOf:
+        - $ref: '#/definitions/ent.ChangelogTagEdges'
+        description: |-
+          Edges holds the relations/edges for other nodes in the graph.
+          The values are being populated by the ChangelogTagQuery when eager-loading is set.
+      id:
+        description: ID of the ent.
+        type: string
+      name:
+        description: Name holds the value of the "name" field.
+        type: string
+      updated_at:
+        description: UpdatedAt holds the value of the "updated_at" field.
+        type: string
+    type: object
+  ent.ChangelogTagEdges:
+    properties:
+      changelogs:
+        description: Changelogs holds the value of the changelogs edge.
+        items:
+          $ref: '#/definitions/ent.Changelog'
+        type: array
+      group:
+        allOf:
+        - $ref: '#/definitions/ent.Group'
+        description: Group holds the value of the group edge.
     type: object
   ent.Entity:
     properties:
@@ -515,6 +558,11 @@ definitions:
     type: object
   ent.GroupEdges:
     properties:
+      changelog_tags:
+        description: ChangelogTags holds the value of the changelog_tags edge.
+        items:
+          $ref: '#/definitions/ent.ChangelogTag'
+        type: array
       entities:
         description: Entities holds the value of the entities edge.
         items:
@@ -880,13 +928,46 @@ definitions:
         type: string
       summary:
         type: string
+      tag:
+        $ref: '#/definitions/repo.ChangelogTagSummary'
     type: object
   repo.ChangelogEntryCreate:
     properties:
       summary:
         type: string
+      tagId:
+        type: string
     required:
     - summary
+    type: object
+  repo.ChangelogTagCreate:
+    properties:
+      color:
+        type: string
+      name:
+        type: string
+    required:
+    - name
+    type: object
+  repo.ChangelogTagOut:
+    properties:
+      color:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  repo.ChangelogTagSummary:
+    properties:
+      color:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
     type: object
   repo.DuplicateOptions:
     properties:
@@ -2214,6 +2295,60 @@ paths:
       summary: Get Item by Asset ID
       tags:
       - Items
+  /v1/changelog-tags:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/repo.ChangelogTagOut'
+            type: array
+      security:
+      - Bearer: []
+      summary: Get All Changelog Tags
+      tags:
+      - Changelog Tags
+    post:
+      parameters:
+      - description: Tag Data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/repo.ChangelogTagCreate'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/repo.ChangelogTagOut'
+      security:
+      - Bearer: []
+      summary: Create Changelog Tag
+      tags:
+      - Changelog Tags
+  /v1/changelog-tags/{id}:
+    delete:
+      parameters:
+      - description: Tag ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+      security:
+      - Bearer: []
+      summary: Delete Changelog Tag
+      tags:
+      - Changelog Tags
   /v1/currency:
     get:
       produces:
