# backend/internal/data/ent/schema/group.go
@@ -50,6 +50,7 @@ func (Group) Edges() []ent.Edge {
 		owned("invitation_tokens", GroupInvitationToken.Type),
 		owned("notifiers", Notifier.Type),
 		owned("entity_templates", EntityTemplate.Type),
+		owned("changelog_tags", ChangelogTag.Type),
 		// $scaffold_edge
 	}
 }
